hphp/test/zend/bad/ext/standard/tests/strings/bug62462.php
<?php
echo quoted_printable_encode(str_repeat("\xc4\x85", 77));
?>

==DONE==